# gravity-output

./: .gitignore  Cargo.toml  ExampleUsage.cs  GravityFrameReader.cs  GravitySequenceReader.cs  README.md  SequenceExample.cs  data_analyzer.py  settings copy.json  settings.json
src/: main.rs  nbody.wgsl  util.rs
