[package]
name = "gravity-output"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.2", features = ["derive"] }
flate2 = "1.1.2"
glam = {version =  "0.30.7", features = ["bytemuck"]}
rand = { version = "0.9.2", features = [] }
rayon = "1.11.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
